tests/files/type_checker_tests/should_pass/263.cmdr
//Test read expressions type check
a = 1;
x = read (2.0, true, 1)[a];
