tests/files/type_checker_tests/should_fail/086.cmdr
//Should fail indexing if empty tuple
x = ()[0];
